// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTable::Table::Cell default cell with a click handler passed 1`] = `
<td
  class="limit-overflow"
>
  <div
    class="cell-wrapper"
  >
    <div>
      <div
        class="subject"
      >
        Great ticket
      </div>
      <div
        class="description"
      >
        undefined
      </div>
    </div>
  </div>
</td>
`;

exports[`ViewTable::Table::Cell default cell with a url passed 1`] = `
<td
  class="limit-overflow"
>
  <a
    to="/app/ticket/123"
  >
    <div
      class="cell-wrapper"
    >
      <div>
        <div
          class="subject"
        >
          Great ticket
        </div>
        <div
          class="description"
        >
          undefined
        </div>
      </div>
    </div>
  </a>
</td>
`;

exports[`ViewTable::Table::Cell default cell with no click handler passed (cant open items) 1`] = `
<td
  class="limit-overflow"
>
  <div
    class="cell-wrapper"
  >
    <div>
      <div
        class="subject"
      >
        Great ticket
      </div>
      <div
        class="description"
      >
        undefined
      </div>
    </div>
  </div>
</td>
`;

exports[`ViewTable::Table::Cell should use default props 1`] = `
<td
  class="limit-overflow"
>
  <div
    class="cell-wrapper"
  >
    <div>
      <div
        class="subject"
      >
        undefined
      </div>
      <div
        class="description"
      >
        undefined
      </div>
    </div>
  </div>
</td>
`;
